edited and added main section of the page

--- a/index.html
+++ b/index.html
@@ -13,28 +13,52 @@
     />
   </head>
   <body>
-    <div class="container">
-      <header>
-        <div id="navbar">
-          <img src="getApp.svg" alt="Get App" />
-          <h3>Get APP</h3>
-          <div class="buttons-container">
-            <button class="button1">LEARN</button>
-            <button class="button2">BLOG</button>
-            <button class="button3">ABOUT US</button>
-          </div>
-          <button class="button4">GET STARTED</button>
+    <header>
+      <div id="navbar">
+        <img src="getApp.svg" alt="Get App" />
+        <h3>Get APP</h3>
+        <div class="buttons-container">
+          <a href="#" class="learn">LEARN</a>
+          <a href="#" class="blog">BLOG</a>
+          <a href="#" class="about-us">ABOUT US</a>
         </div>
-      </header>
-      <div class="frame1">
+        <button class="get-started">GET STARTED</button>
+      </div>
+    </header>
+    <div class="container">
+      <div class="left-container">
         <div class="text">
           Say goodbye to idle money.
           <br />
           <p>Earn 4% yield with DeFi-powered saving.</p>
+          <button>GET STARTED</button>
+          <a href="#">Available on IOS</a>
         </div>
-
-        <img src="" alt="" />
       </div>
+      <div class="right-container">
+        <img src="savings.svg" />
+      </div>
+    </div>
+    <div class="container2">
+      <h3>We make <br />money move.</h3>
+      <button>LEARN MORE</button>
+      <ul>
+        <li>
+          <img src="bankcard.svg" />
+          <p>Connect your bank account and start saving in under 5 minutes.</p>
+        </li>
+        <li>
+          <img src="defi.svg" />
+          <p>4% APY through the power of decentralized finance.</p>
+        </li>
+        <li>
+          <img src="earnings.svg" />
+          <p>
+            Over $5+ million earning interest safely thanks to best-in-class
+            lending partners.
+          </p>
+        </li>
+      </ul>
     </div>
     <footer></footer>
   </body>
