modified by applying flexbox

--- a/index.html
+++ b/index.html
@@ -59,7 +59,22 @@
           </p>
         </li>
       </ul>
+      <h3>How it works?</h3>
+      <div class="main">
+        <img src="device.svg" />
+        <button>GET STARTED</button>
+      </div>
+      <div class="endline">
+        <h3>As featured in...</h3>
+        <div class="options">
+          <img src="logo1.svg" />
+          <img src="logo2.svg" />
+          <img src="logo3.svg" />
+          <img src="logo4.svg" />
+        </div>
+      </div>
     </div>
+
     <footer></footer>
   </body>
 </html>
