added the second section

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
           <a href="#" class="blog">BLOG</a>
           <a href="#" class="about-us">ABOUT US</a>
         </div>
-        <button class="get-started">GET STARTED</button>
+        <button class="get-started-button">GET STARTED</button>
       </div>
     </header>
     <div class="container">
@@ -60,9 +60,32 @@
         </li>
       </ul>
       <h3>How it works?</h3>
-      <div class="main">
-        <img src="device.svg" />
-        <button>GET STARTED</button>
+      <div class="container3">
+        <div class="left">
+          <span>01</span>
+          <h4>Deposit</h4>
+          <p class="p-01">Link your bank account to add funds instantly.</p>
+          <span>02</span>
+          <h4>Automate</h4>
+          <p>Collect spare change or schedule recurring deposits.</p>
+        </div>
+        <div class="main">
+          <img src="device.svg" />
+          <button>GET STARTED</button>
+        </div>
+        <div class="right">
+          <span>03</span>
+          <h4>Earn Yield</h4>
+          <p class="p-03">
+            Generate fixed or variable interest in real time at rates up to 20x
+            your bank.
+          </p>
+          <span>04</span>
+          <h4>Cash Out</h4>
+          <p>
+            Move your savings in and out freely with no fees or fixed terms.
+          </p>
+        </div>
       </div>
       <div class="endline">
         <h3>As featured in...</h3>
