added scrolling function

--- a/index.html
+++ b/index.html
@@ -96,6 +96,30 @@
           <img src="logo4.svg" />
         </div>
       </div>
+      <div class="heading">
+        <h2>"It's easy, it's fun, and it's got charm to burn."</h2>
+        <h4>MossCow</h4>
+        <h6>App Store review</h6>
+      </div>
+      <div class="slider">
+        <div class="images">
+          <input type="radio" name="slide" id="img1" checked />
+          <input type="radio" name="slide" id="img2" />
+          <input type="radio" name="slide" id="img3" />
+          <input type="radio" name="slide" id="img4" />
+
+          <img src="reviewer1.svg" class="m1" alt="img1" />
+          <img src="reviewer2.svg" class="m2" alt="img2" />
+          <img src="reviwer3.svg" class="m3" alt="img3" />
+          <img src="reviwer4.svg" class="m4" alt="img4" />
+        </div>
+        <div class="dots">
+          <label for="img1">&#9675;</label>
+          <label for="img2">&#9675;</label>
+          <label for="img3">&#9675;</label>
+          <label for="img4">&#9675;</label>
+        </div>
+      </div>
     </div>
 
     <footer></footer>
