completed the main section

--- a/index.html
+++ b/index.html
@@ -120,6 +120,24 @@
           <label for="img4">&#9675;</label>
         </div>
       </div>
+      <div class="content1">
+        <div class="img-container">
+          <img src="getapp-logo.svg" />
+        </div>
+        <div class="text">4%</div>
+        <div class="intro">
+          <h1>Introducing Get App Fixed</h1>
+          <p>Earn predictable 4% fixed APY with the power of DeFi</p>
+        </div>
+      </div>
+      <div class="content2">
+        <div class="text-container">
+          <h1>Make dough, get app.</h1>
+          <p>Join Get App and start investing in munites.</p>
+          <button class="get-started-button">GET STARTED</button>
+        </div>
+        <img src="money.svg" />
+      </div>
     </div>
 
     <footer></footer>
