added the footer

--- a/index.html
+++ b/index.html
@@ -138,8 +138,44 @@
         </div>
         <img src="money.svg" />
       </div>
+      <footer>
+        <div class="footer">
+          <div class="navline">
+            <h2>Get APP</h2>
+            <div class="product">
+              <ul>
+                PRODUCT
+              </ul>
+              <li><a href="#">Home</a></li>
+              <li><a href="#">Learn</a></li>
+              <li><a href="#">Blog</a></li>
+              <li><a href="#">About us</a></li>
+            </div>
+            <div class="information">
+              <ul>
+                INFORMATION
+              </ul>
+              <li><a href="#">Transparency</a></li>
+              <li><a href="#">Help</a></li>
+            </div>
+            <div class="be-social">
+              <ul>
+                BE SOCIAL
+              </ul>
+              <li><a href="#">Facebook</a></li>
+              <li><a href="#">Twitter</a></li>
+              <li><a href="#">Instagram</a></li>
+              <li><a href="#">Linkedin</a></li>
+            </div>
+          </div>
+          <div class="footer-line">
+            <p>&copy;2021 - Get APP | All rights reserved</p>
+            <a href="#">Terms and conditions</a>
+            <a href="#">Legal</a>
+            <a href="#">Patents</a>
+          </div>
+        </div>
+      </footer>
     </div>
-
-    <footer></footer>
   </body>
 </html>
