updated the files

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <body>
     <header>
       <div id="navbar">
-        <img src="getApp.svg" alt="Get App" />
+        <img src="assets/getApp.svg" alt="Get App" />
         <h3>Get APP</h3>
         <div class="buttons-container">
           <a href="#" class="learn">LEARN</a>
@@ -27,7 +27,7 @@
     </header>
     <div class="container">
       <div class="left-container">
-        <div class="text">
+        <div class="say-goodbye">
           Say goodbye to idle money.
           <br />
           <p>Earn 4% yield with DeFi-powered saving.</p>
@@ -36,7 +36,7 @@
         </div>
       </div>
       <div class="right-container">
-        <img src="savings.svg" />
+        <img src="assets/savings.svg" />
       </div>
     </div>
     <div class="container2">
@@ -44,15 +44,15 @@
       <button>LEARN MORE</button>
       <ul>
         <li>
-          <img src="bankcard.svg" />
+          <img src="assets/bankcard.svg" />
           <p>Connect your bank account and start saving in under 5 minutes.</p>
         </li>
         <li>
-          <img src="defi.svg" />
+          <img src="assets/defi.svg" />
           <p>4% APY through the power of decentralized finance.</p>
         </li>
         <li>
-          <img src="earnings.svg" />
+          <img src="assets/earnings.svg" />
           <p>
             Over $5+ million earning interest safely thanks to best-in-class
             lending partners.
@@ -70,7 +70,7 @@
           <p>Collect spare change or schedule recurring deposits.</p>
         </div>
         <div class="main">
-          <img src="device.svg" />
+          <img src="assets/device.svg" />
           <button>GET STARTED</button>
         </div>
         <div class="right">
@@ -90,10 +90,10 @@
       <div class="endline">
         <h3>As featured in...</h3>
         <div class="options">
-          <img src="logo1.svg" />
-          <img src="logo2.svg" />
-          <img src="logo3.svg" />
-          <img src="logo4.svg" />
+          <img src="assets/logo1.svg" />
+          <img src="assets/logo2.svg" />
+          <img src="assets/logo3.svg" />
+          <img src="assets/logo4.svg" />
         </div>
       </div>
       <div class="heading">
@@ -108,10 +108,10 @@
           <input type="radio" name="slide" id="img3" />
           <input type="radio" name="slide" id="img4" />
 
-          <img src="reviewer1.svg" class="m1" alt="img1" />
-          <img src="reviewer2.svg" class="m2" alt="img2" />
-          <img src="reviwer3.svg" class="m3" alt="img3" />
-          <img src="reviwer4.svg" class="m4" alt="img4" />
+          <img src="assets/reviewer1.svg" class="m1" alt="img1" />
+          <img src="assets/reviewer2.svg" class="m2" alt="img2" />
+          <img src="assets/reviwer3.svg" class="m3" alt="img3" />
+          <img src="assets/reviwer4.svg" class="m4" alt="img4" />
         </div>
         <div class="dots">
           <label for="img1">&#9675;</label>
@@ -122,7 +122,7 @@
       </div>
       <div class="content1">
         <div class="img-container">
-          <img src="getapp-logo.svg" />
+          <img src="assets/getapp-logo.svg" />
         </div>
         <div class="text">4%</div>
         <div class="intro">
@@ -136,7 +136,7 @@
           <p>Join Get App and start investing in munites.</p>
           <button class="get-started-button">GET STARTED</button>
         </div>
-        <img src="money.svg" />
+        <img src="assets/money.svg" />
       </div>
       <footer>
         <div class="footer">
